# arcservice

./: .gitignore  pyproject.toml
.github/workflows/: lint.yml  test.yml
arcservice/: __init__.py  app.py  cli.py
tests/: conftest.py  test_filestats.py  test_updown.py
