[tool.poetry]
name = "arcservice"
version = "0.3.2"
description = ""
authors = ["Bastien Wermeille <bastien.wermeille@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
sentry-sdk = {extras = ["flask"], version = "^2.1.1"}
importlib-metadata = "^7.0.0"
flask-cors = "^4.0.0"
waitress = "^3.0.0"

[tool.poetry.group.jupyterhub.dependencies]
jupyterhub = "^5.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-flask = "^1.2.0"
pytest-timeout = "^2.1.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arcservice = { callable = "arcservice.cli:main" }
